--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
 	},
 	"authors": [
 		{
-			"name": "Jorge Sant Ana",
-			"email": "jorge@teste.com.br"
+			"name": "Gabriel Veloso Pinheiro",
+			"email": "gaabrielvelooso@gmail.com"
 		}
 	],
 	"autoload": {
